# trading-agent

./: .env.example  .env.sample  .gitignore  CLAUDE.md  Makefile  README.md  db_manager.py  deploy.sh  pyproject.toml  requirements.txt  streamlit_app.py
back/: .env.sample  Makefile  pyproject.toml  trading_agents.db-shm
back/src/: main.py
back/src/api/: __init__.py  analysis.py  auth.py  economic.py  fear_greed.py  news.py  portfolio.py  reports.py  stocks.py
back/src/core/: config.py  database.py  security.py
back/src/middleware/: logging.py  rate_limit.py
back/src/models/: __init__.py  analysis.py  base.py  portfolio.py  stock_universe.py  user.py
back/src/schemas/: __init__.py  analysis.py  common.py  economic_analysis.py  market.py  portfolio.py
back/src/services/: __init__.py  analysis_manager.py  economic_analysis_service.py  economic_events.py  economic_service.py  fear_greed_service.py  finnhub_service.py  fred_service.py  market_data_service.py  mock_data_service.py  portfolio_seeder.py  portfolio_service.py  stock_search_service.py  stock_seeder.py  stock_service.py
back/src/utils/: stock_utils.py
be/: README.md  alembic.ini  trading_agents.db-wal
be/src/: main.py
be/src/api/: __init__.py  auth.py  economic.py  insights.py  market.py  reports.py
be/src/core/: database.py
be/src/middleware/: __init__.py  security.py
be/src/models/: __init__.py  user.py
be/src/schemas/: __init__.py  analysis.py  auth.py
be/src/services/: economic_events.py  fear_greed_service.py  fundamental_analysis_service.py  sentiment_analysis_service.py  stock_search_service.py  technical_analysis_service.py
cli/: models.py  utils.py
front/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.mjs
front/src/api/: analysis.ts  auth.ts  client.ts  economic.ts  history.ts  index.ts  insights.ts  news.ts  portfolio.ts  stocks.ts  websocket.ts
front/src/components/: App.tsx  ProtectedRoute.tsx
front/src/hooks/: useDebounce.ts  useIntersectionObserver.ts  useMemoizedCallback.ts  useVirtualization.ts
front/src/lib/: constants.ts  utils.ts
front/src/pages/: Analysis.tsx  Dashboard.tsx  Economics.tsx  History.tsx  Login.tsx  News.tsx  Portfolio.tsx  Stocks.tsx
front/src/stores/: analysisStore.ts  authStore.ts  uiStore.ts
front/src/types/: index.ts
front/src/utils/: debounce.ts  storage.ts
tradingagents/: __init__.py  default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/lgnd_investors/: __init__.py  ben_graham_analyst.py  warren_buffett_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/dataflows/: __init__.py  finnhub_utils.py  googlenews_utils.py  interface.py  naver_news_utils.py  yfin_utils.py
tradingagents/graph/: __init__.py  conditional_logic.py  confidence_processing.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
ui/: __init__.py
ui/analysis/: correlation_analyzer.py
ui/auth/: __init__.py  login_page.py  session_manager.py
ui/charts/: chart_factory.py
ui/dashboard/: __init__.py  agent_status.py  configuration_panel.py  market_dashboard.py  metrics_display.py  welcome_header.py
ui/financial/: __init__.py  economic_indicators.py  market_charts.py
ui/reports/: __init__.py  history_manager.py  report_history.py  report_viewer.py
ui/utils/: __init__.py  chart_utils.py  styling.py
(+44 files in other folders)
