[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "akshare>=1.16.98",
    "asyncpg>=0.29.0",
    "backtrader>=1.9.78.123",
    "beautifulsoup4>=4.13.4",
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "fredapi>=0.5.2",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "plotly>=6.3.0",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "stockstats>=0.6.5",
    "streamlit>=1.48.1",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]
