[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-agents-be"
version = "0.1.0"
description = "Trading Agents Backend"
requires-python = ">=3.10"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.12.15",
  "aiomysql>=0.2.0",
  "aiosqlite>=0.21.0",
  "alembic>=1.16.4",
  "alpha-vantage>=3.0.0",
  "asyncpg>=0.30.0",
  "cachetools>=5.3.0",
  "celery>=5.5.3",
  "chromadb>=1.0.20",
  "cryptography>=45.0.6",
  "cvxpy>=1.7.2",
  "ddgs>=9.5.4",
  "duckduckgo-search>=8.1.1",
  "fastapi>=0.116.1",
  "fastapi-mail>=1.5.0",
  "finnhub-python>=2.4.24",
  "gunicorn>=23.0.0",
  "httpx>=0.28.1",
  "kombu>=5.5.4",
  "langchain-anthropic>=0.3.19",
  "langchain-community>=0.3.27",
  "langchain-core>=0.3.74",
  "langchain-google-genai>=2.1.9",
  "langchain-openai>=0.3.30",
  "langgraph>=0.6.6",
  "numpy>=2.2.6",
  "opendartreader>=0.2.3",
  "pandas>=2.3.1",
  "parsel>=1.10.0",
  "passlib[bcrypt]>=1.7.4",
  "praw>=7.8.1",
  "prometheus-client>=0.22.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pykrx>=1.0.51",
  "pyportfolioopt>=1.5.6",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.1.1",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "python-socketio>=5.13.0",
  "pytz>=2025.2",
  "requests>=2.32.5",
  "scikit-learn>=1.7.1",
  "sentry-sdk[fastapi]>=2.35.0",
  "slowapi>=0.1.9",
  "sqlalchemy-utils>=0.41.2",
  "sqlalchemy[asyncio]>=2.0.43",
  "stockstats>=0.6.5",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
  "vadersentiment>=3.3.2",
  "websockets>=15.0.1",
  "yfinance>=0.2.65",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "middleware", "models", "schemas", "services"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio", 
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
